Updated readmes; add curl